Work in progress for Event
The system itself seems to be working okay.
Change the String mode to "QueueList" in DisplayQueue() to debug and see how the queue lists are working.
The numerical results from Samst() and OutSampst() are still coming out off. Not sure yet why.